# spriter

./: .gitignore  Cargo.toml  README.md
docs/superpowers/plans/: 2026-03-20-spriter.md  2026-04-29-manual-sprite-sheet-refresh.md
docs/superpowers/specs/: 2026-03-20-spriter-design.md  2026-04-29-manual-sprite-sheet-refresh-design.md
src/: app.rs  lib.rs  main.rs  tab.rs
src/io/: mod.rs  project_file.rs  sprite_sheet.rs
src/model/: mod.rs  playback.rs  project.rs
src/ui/: canvas.rs  mod.rs  playback_bar.rs  side_panel.rs
tests/: integration_test.rs  playback_test.rs  project_file_test.rs  project_test.rs  sprite_sheet_test.rs
